<resources>
    <string name="app_name">Thirty</string>
    <string name="throw_dices">Throw</string>
    <string name="collect_points">Collect points</string>
    <string name="group_color">Group color</string>
    <string name="round_score_text">Round score: </string>
    <string name="round_score">0</string>
    <string name="total_score_text">Total score: </string>
    <string name="total_score">0</string>

    <string name="dice_image1">Dice nr 1</string>
    <string name="dice_image2">Dice nr 2</string>
    <string name="dice_image3">Dice nr 3</string>
    <string name="dice_image4">Dice nr 4</string>
    <string name="dice_image5">Dice nr 5</string>
    <string name="dice_image6">Dice nr 6</string>

    <string name="button_blue">Blue group</string>
    <string name="button_green">Green group</string>
    <string name="button_yellow">Yellow group</string>
    <string name="button_red">Red group</string>
    <string name="button_purple">Purple group</string>
    <string name="button_brown">Brown group</string>

    <string-array name="rounds_array">
        <item>Low</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string name="your_score"><u>Your score</u></string>
    <string name="scoreboard_round">Round</string>
    <string name="scoreboard_score">Score</string>



    <string name="low">Low</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="score_low">0</string>
    <string name="score_4">0</string>
    <string name="score_5">0</string>
    <string name="score_6">0</string>
    <string name="score_7">0</string>
    <string name="score_8">0</string>
    <string name="score_9">0</string>
    <string name="score_10">0</string>
    <string name="score_11">0</string>
    <string name="score_12">0</string>


    <string name="play_again">Play again</string>
    <string name="total_score_scoreboard">0</string>

</resources>