<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Start score information rows-->
    <TextView
        android:id="@+id/your_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_score"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        />

    <TextView
        android:id="@+id/scoreboard_round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreboard_round"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/your_score"
        app:layout_constraintTop_toBottomOf="@id/your_score"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/scoreboard_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreboard_score"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/scoreboard_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/scoreboard_round"
        android:layout_marginStart="100dp"
        />
    <!-- End score information rows-->

    <!-- Start score rows-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/scoreboard_round"
        app:layout_constraintStart_toStartOf="@id/scoreboard_round"
        app:layout_constraintEnd_toEndOf="@id/scoreboard_round">

        <TextView
            style="@style/results_textView_portrait"
            android:text="@string/low"
            />
        <TextView
            style ="@style/results_textView_portrait"
            android:text="@string/_4"
            />
        <TextView
            style= "@style/results_textView_portrait"
            android:text="@string/_5"
            />
        <TextView
            style= "@style/results_textView_portrait"
            android:text="@string/_6"
            />
        <TextView
            style= "@style/results_textView_portrait"
            android:text="@string/_7"
            />
        <TextView
            style= "@style/results_textView_portrait"
            android:text="@string/_8"
            />
        <TextView
            style= "@style/results_textView_portrait"
            android:text="@string/_9"
            />
        <TextView
            style= "@style/results_textView_portrait"
            android:text="@string/_10"
            />
        <TextView
            style= "@style/results_textView_portrait"
            android:text="@string/_11"
            />
        <TextView
            style= "@style/results_textView_portrait"
            android:text="@string/_12"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/scores_scoreboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/scoreboard_score"
        app:layout_constraintStart_toStartOf="@id/scoreboard_score"
        app:layout_constraintEnd_toEndOf="@id/scoreboard_score">

        <TextView
            android:id="@+id/score_low"
            style= "@style/results_textView_portrait"
            android:text="@string/score_low"
            />
        <TextView
            android:id="@+id/score_4"
            style= "@style/results_textView_portrait"
            android:text="@string/score_4"
            />
        <TextView
            android:id="@+id/score_5"
            style= "@style/results_textView_portrait"
            android:text="@string/score_5"
            />
        <TextView
            android:id="@+id/score_6"
            style= "@style/results_textView_portrait"
            android:text="@string/score_6"
            />
        <TextView
            android:id="@+id/score_7"
            style= "@style/results_textView_portrait"
            android:text="@string/score_7"
            />
        <TextView
            android:id="@+id/score_8"
            style= "@style/results_textView_portrait"
            android:text="@string/score_8"
            />
        <TextView
            android:id="@+id/score_9"
            style= "@style/results_textView_portrait"
            android:text="@string/score_9"
            />
        <TextView
            android:id="@+id/score_10"
            style= "@style/results_textView_portrait"
            android:text="@string/score_10"
            />
        <TextView
            android:id="@+id/score_11"
            style= "@style/results_textView_portrait"
            android:text="@string/score_11"
            />
        <TextView
            android:id="@+id/score_12"
            style= "@style/results_textView_portrait"
            android:text="@string/score_12"
            />

    </LinearLayout>

    <!-- Start tot score row-->
    <TextView
        android:id="@+id/total_score_scoreboard_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_score_text"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/play_again"
        app:layout_constraintStart_toStartOf="@id/scoreboard_round"
        android:layout_marginBottom="15dp"
        />

    <TextView
        android:id="@+id/total_score_scoreboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_score_scoreboard"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@id/scoreboard_score"
        app:layout_constraintTop_toTopOf="@id/total_score_scoreboard_headline"
        />
    <!-- End tot score row-->

    <!-- End score rows-->

    <Button
        android:id="@+id/play_again"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/play_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>